--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,8 @@ Encoding: UTF-8
 LazyData: true
 Suggests: 
     testthat,
-    faux
+    faux,
+    covr
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.0
 Imports: 
