--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,10 @@
 S3method(print,nested_list)
 S3method(print,psychds_codebook)
 export("%>%")
+export(author_jats)
+export(check_orcid)
 export(codebook)
+export(credit_roles)
 export(interactive_codebook)
 export(nested_list)
 export(pdsbuilder_options)
