Moved shiny app

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(codebook)
 export(credit_roles)
 export(interactive_codebook)
 export(nested_list)
+export(pds_app)
 export(pdsbuilder_options)
 export(readline_check)
 importFrom(magrittr,"%>%")
