--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,11 @@ RoxygenNote: 7.1.0
 Imports: 
     magrittr,
     dplyr,
-    jsonlite
+    jsonlite,
+    shiny,
+    shinydashboard,
+    shinyjs,
+    DT
 Remotes:
     debruine/faux
 URL: https://github.com/debruine/pdsbuilder
