--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,7 +31,7 @@ Imports:
     DT,
     shiny.i18n
 Remotes:
-    debruine/faux
+    debruine/faux,
     appsilon/shiny.i18n
 URL: https://github.com/debruine/pdsbuilder
 BugReports: https://github.com/debruine/pdsbuilder/issues
